{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 666,
  "lineage": "075d4133-b24b-fcf9-c1c1-e7935023ed28",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0d223a5a35d0ddbfd",
            "id": "rtb-0d223a5a35d0ddbfd",
            "owner_id": "713544053769",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-private-route-table"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-test-instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00cb4c0d60b9476f4",
            "arn": "arn:aws:ec2:us-east-1:713544053769:instance/i-064a12f8376b57296",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064a12f8376b57296",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-test-terraform-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-01500c8085a85aa66",
            "private_dns": "ip-10-0-1-32.ec2.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-3-92-77-235.compute-1.amazonaws.com",
            "public_ip": "3.92.77.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ad46494b4f25d748",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058fb7f23be916165",
            "tags": {
              "Name": "my-instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0013a2ca32d078087"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mytest-key",
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00cb4c0d60b9476f4",
            "arn": "arn:aws:ec2:us-east-1:713544053769:instance/i-066bff61e5a8d1524",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066bff61e5a8d1524",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-test-terraform-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-026969aabd92c84e6",
            "private_dns": "ip-10-0-2-187.ec2.internal",
            "private_ip": "10.0.2.187",
            "public_dns": "ec2-54-89-36-86.compute-1.amazonaws.com",
            "public_ip": "54.89.36.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c2158e2e4e782abc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f47cf589c4af628",
            "tags": {
              "Name": "my-instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0013a2ca32d078087"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mytest-key",
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-023f76e04c53a4f14",
            "owner_id": "713544053769",
            "tags": {
              "Name": "my-test-igw"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fb7e90715b7b5e58",
            "owner_id": "713544053769",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023f76e04c53a4f14",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-test-public-route"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078a1aa4db6f38baa",
            "route_table_id": "rtb-0d223a5a35d0ddbfd",
            "subnet_id": "subnet-086141cceb285bad5"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c79aaba1aed9561b",
            "route_table_id": "rtb-0d223a5a35d0ddbfd",
            "subnet_id": "subnet-0d594885dc8f5f7e2"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6cc5184c0beb31f",
            "route_table_id": "rtb-0fb7e90715b7b5e58",
            "subnet_id": "subnet-058fb7f23be916165"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7a3c468a1bdd830",
            "route_table_id": "rtb-0fb7e90715b7b5e58",
            "subnet_id": "subnet-08f47cf589c4af628"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713544053769:security-group/sg-0013a2ca32d078087",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0013a2ca32d078087",
            "ingress": [
              {
                "cidr_blocks": [
                  "215.168.82.56/32",
                  "106.51.0.14/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test_sg",
            "name_prefix": null,
            "owner_id": "713544053769",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2773389767",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0013a2ca32d078087",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "215.168.82.56/32",
              "106.51.0.14/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-716894621",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0013a2ca32d078087",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.test_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713544053769:subnet/subnet-086141cceb285bad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-086141cceb285bad5",
            "map_public_ip_on_launch": false,
            "owner_id": "713544053769",
            "tags": {
              "Name": "my-test-private-subnet.1"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713544053769:subnet/subnet-0d594885dc8f5f7e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d594885dc8f5f7e2",
            "map_public_ip_on_launch": false,
            "owner_id": "713544053769",
            "tags": {
              "Name": "my-test-private-subnet.2"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713544053769:subnet/subnet-058fb7f23be916165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-058fb7f23be916165",
            "map_public_ip_on_launch": true,
            "owner_id": "713544053769",
            "tags": {
              "Name": "my-test-public-subnet.1"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713544053769:subnet/subnet-08f47cf589c4af628",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08f47cf589c4af628",
            "map_public_ip_on_launch": true,
            "owner_id": "713544053769",
            "tags": {
              "Name": "my-test-public-subnet.2"
            },
            "vpc_id": "vpc-01d99f941b4a2ca95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:713544053769:vpc/vpc-01d99f941b4a2ca95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036e7965f693e2d0d",
            "default_route_table_id": "rtb-0d223a5a35d0ddbfd",
            "default_security_group_id": "sg-0cd473ebf5fd365e4",
            "dhcp_options_id": "dopt-09647a72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01d99f941b4a2ca95",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d223a5a35d0ddbfd",
            "owner_id": "713544053769",
            "tags": {
              "Name": "my-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}